--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-# local package
--e .
+streamlit
+python-dotenv
+pdf2image
+google-generativeai
+PyPDF2
+pandas
+pdfplumber
 
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
